fix layout on mobile device

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,8 @@
 
 .cookie-notice-container {
     position: fixed;
-    bottom: 20px;
-    right: 10px;
+    bottom: 0px;
+    right: 0px;
     width: 500px;
     max-width: 100%;
     z-index: 5;
@@ -119,6 +119,7 @@
 
 .youtube-video-placeholder {
     width: 560px;
+    max-width: 100%;
     height: 338px;
     background: url('/img/camera-2008489.svg');
     background-repeat: no-repeat;
